Add task view and adjust search bar scale animation

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>TaskMail</title>
+    <title>Awesome Flows</title>
 </head>
 <body style="margin:0px;padding:0px; height:100%;background-color: aqua;">
     <div id="root" style="height:100%;box-sizing: border-box;">
